# llvm-comp

./: .clang-format  .clangd  .gitignore  README.md  TODO  grammar.txt
src/: ASTnode.cpp  ASTnode.hpp  AssignmentExpr.cpp  AssignmentExpr.hpp  AssignmentLHS.cpp  AssignmentLHS.hpp  BlockNode.cpp  BlockNode.hpp  BoolNode.hpp  CMakeLists.txt  DeclListNode.cpp  DeclListNode.hpp  DeclNode.hpp  DisCon.cpp  DisCon.hpp  ExprNode.hpp  ExternListNode.cpp  ExternListNode.hpp  FloatNode.hpp  FunCallNode.cpp  FunCallNode.hpp  FunDeclNode.cpp  FunDeclNode.hpp  FunDefNode.cpp  FunDefNode.hpp  FunctionSignature.cpp  FunctionSignature.hpp  IfStmt.cpp  IfStmt.hpp  IfWithElseNode.cpp  IfWithElseNode.hpp  IntNode.hpp  LitNode.hpp  LitNodes.cpp  LocalDeclsNode.cpp  LocalDeclsNode.hpp  Makefile  NegationNode.cpp  NegationNode.hpp  NotNode.cpp  (+50 more)
tests/: tests.sh  tests2.sh
tests/addition/: addition  addition.c  driver.cpp  output.ll
tests/cosine/: cosine.c  driver.cpp  output.ll
tests/factorial/: driver.cpp  factorial.c  output.ll
tests/fibonacci/: driver.cpp  fibonacci.c  output.ll
tests/mytest/: mytest.c  mytest.ll  output.ll
tests/palindrome/: driver.cpp  palindrome.c
tests/pi/: driver.cpp  output.ll  pi.c
tests/recurse/: driver.cpp  recurse.c
tests/rfact/: driver.cpp  output.ll  rfact.c
tests/unary/: driver.cpp  output.ll  perf_out  unary.c
tests/void/: driver.cpp  output.ll  void.c
tests/while/: driver.cpp  output.ll  while.c
